--- a/style/style.css
+++ b/style/style.css
@@ -13,6 +13,7 @@ body {
 
 header {
     background-image: linear-gradient(to bottom, rgb(49, 96, 114), rgb(84, 200, 204));
+    font-size: 1.1em;
     text-align: center;
     padding: 20px;
     
